--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/mgn-smooth-scroll.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --hot --inline",
+    "start": "webpack-dev-server --mode development --hot",
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development"
   },
@@ -21,9 +21,9 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1"
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {}
 }
